# jetplot

./: .gitignore  .travis.yml  404.html  AGENTS.md  CNAME  LICENSE  LICENSE.md  Makefile  README.md  atomic.py  bumps.py  index.html  justfile  mkdocs.yml  mutualinfo.py  objects.inv  peakdetect.py  prettyplot.py  progressbar.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  utils.py
.github/workflows/: ci.yaml  ci.yml  tests.yml  typecheck.yml
LICENSE/: index.html
api/: index.html
api/chart_utils/: index.html
api/colors/: index.html
api/images/: index.html
api/plots/: index.html
api/signals/: index.html
api/style/: index.html
api/timepiece/: index.html
description/: index.html
docs/: Makefile  api.md  conf.py  description.md  index.md  index.rst
docs/api/: chart_utils.md  colors.md  images.md  plots.md  signals.md  style.md  timepiece.md
jetpack/: __init__.py  animation.py  capsules.py  chart.py  colors.py  functional.py  hud.py  ion.py  ionic.py  matlab.py  plot.py  plots.py  prettyplot.py  progressbar.py  setup.py  signals.py  spatial.py  style.py  timepiece.py  unsorted.py  utils.py
jetpack/chart/: __init__.py  animation.py  images.py  movie.py  plots.py  special.py  stats.py  traces.py  utils.py
jetplot/: __init__.py  chart_utils.py  colors.py  demo.py  images.py  plots.py  signals.py  style.py  timepiece.py  typing.py
search/: search_index.json
src/jetplot/: __init__.py  chart_utils.py  colors.py  demo.py  images.py  plots.py  signals.py  style.py  timepiece.py  typing.py
tests/: test_capsules.py  test_chart.py  test_colors.py  test_demo.py  test_images.py  test_ionic.py  test_plots.py  test_signals.py  test_style.py  test_tensor.py  test_timepiece.py  test_utils.py
