[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jetplot"
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "numpy>=1.19",
  "scipy",
  "matplotlib",
  "scikit-learn>=1.0.2",
]
authors = [
  {name = "Niru Maheswaranathan", email="niru@hey.com"},
]
description = "jetplot is collection of miscellaneous utils for Matplotlib."
readme = "README.md"
license = {file = "LICENSE.md"}

[project.urls]
Homepage = "https://github.com/nirum/jetplot"

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov"]

[tool.ruff]
lint.extend-ignore = ["E111", "E114", "E501", "F403"]

[tool.setuptools.dynamic]
version = {attr = "jetplot.__version__"}
