[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jetplot"
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "numpy>=1.19",
  "scipy",
  "matplotlib",
  "scikit-learn>=1.0.2",
]
authors = [
  {name = "Niru Maheswaranathan", email="niru@hey.com"},
]
description = "jetplot is collection of miscellaneous utils for Matplotlib."
readme = "README.md"
license = {file = "LICENSE.md"}

[project.urls]
Homepage = "https://github.com/nirum/jetplot"

[project.optional-dependencies]
dev = [
    "pyrefly>=0.14.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.11.10",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.2.7",
    "mkdocstrings[python]>=0.22.0",
]

[tool.pyrefly]
search_path = [
  "src/jetplot"
]

[tool.ruff]
lint.extend-ignore = ["E111", "E114", "E501", "F403"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "jetplot.__version__"}
